# whispe-rs-types

./: Cargo.toml  Makefile.toml  make-test.out  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: linters.yml  run-linters.yml  tests.yml
src/: duration.rs  handle.rs  hash.rs  lib.rs  native_duration.rs  ntapi_ext.rs  ntstatus.rs  util.rs
