[package]
name = "whispe-rs-types"
version = "0.2.1"
edition = "2021"

[features]
default = ["alloc"]
std = ["alloc"]
alloc = []
unsafe_conversions = []
nosym = []
win = ["windows-sys", "winapi", "ntapi"]

[dependencies]
obfstr = "0.4"

[dependencies.bitflags]
version = "2.0"
default-features = false

[dependencies.widestring]
version = "1"
default-features = false

[dependencies.num_enum]
version = "0.7"
default-features = false

[dependencies.ntapi]
version = "0.4"
features = ["impl-default"]
default-features = false
optional = true

[dependencies.winapi]
version = "0.3"
features = ["minwinbase", "windef"]
optional = true

[dependencies.windows-sys]
version = "0.48"
features = ["Win32_Foundation"]
default-features = false
optional = true

[dev-dependencies]
anyhow = "1"
