[package]
name = "whispe-rs-types"
version = "0.2.2"
edition = "2021"

[features]
default = ["alloc"]
std = ["alloc"]
alloc = []
nosym = []
unsafe_conversions = []

[dependencies]
obfstr = "0.4"

[dependencies.bitflags]
version = "2.0"
default-features = false

[dependencies.widestring]
version = "1"
default-features = false

[dependencies.num_enum]
version = "0.7"
default-features = false

[target.'cfg(windows)'.dependencies.ntapi]
version = "0.4"
features = ["impl-default"]
default-features = false

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["minwinbase", "windef"]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.48"
features = ["Win32_Foundation"]
default-features = false

[dev-dependencies]
anyhow = "1"
